<resources>
    <string name="additionInfo">Additional information</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Backpacker Buddy</string>
    <string name="backpacker">Backpacker </string>
    <string name="bucketList">MY BUCKET LIST</string>
    <string name="bucketPost">Bucket Item</string>
    <string name="buddy">Buddy </string>
    <string name="comment">Comment</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="continueNoTag">Country tag makes it easier for people to find your post. Continue without?</string>
    <string name="country">Country</string>
    <string name="countryTagMissing">Country Tag Missing</string>
    <string name="dash">-</string>
    <string name="dateOfArrival">Select Date of Arrival</string>
    <string name="dateOfLeave">Select Date of Leave</string>
    <string name="deleteMessage">The message will not be deleted from the chat of the other user</string>
    <string name="deletePost">Delete Post</string>
    <string name="detailFour">No ideal day? Let\'s ask them.</string>
    <string name="details">Details</string>
    <string name="detailOne">User did not fill details out. Ask them.</string>
    <string name="detailThree">Nothing to see here.</string>
    <string name="detailTwo">No information about their must haves.</string>
    <string name="discussion">Discussion Post</string>
    <string name="drawerClosed">Closed</string>
    <string name="drawerOpened">Opened</string>
    <string name="edit">Edit</string>
    <string name="editPost">Edit Post</string>
    <string name="editPhotoDes">Edit Profile Photo</string>
    <string name="email">Email Address</string>
    <string name="fabric_id">0bd3961be22e9764bf268e947122efe9733ea27e</string>
    <string name="facebook_app_id">1309489189123664</string>
    <string name="filter">Filter</string>
    <string name="filterBy">Filter By</string>
    <string name="findBud">FIND BUDDY</string>
    <string name="firstName">First Name</string>
    <string name="from">From</string>
    <string name="generalChat">DISCUSSION ROOM</string>
    <string name="google_map_id">AIzaSyDH0kSHOvjduYwKBCWmZ0gcac0j9LsU-k8</string>
    <string name="hntMessage">Type message here</string>
    <string name="idealDay">Your ideal backpacking day</string>
    <string name="inbox">INBOX</string>
    <string name="info">Info</string>
    <string name="lastName">Last Name</string>
    <string name="location">Location</string>
    <string name="login">Log In</string>
    <string name="loginBold">LOG IN</string>
    <string name="manageDes">MANAGE POSTS</string>
    <string name="month">Month</string>
    <string name="near">Near</string>
    <string name="nearby">Nearby</string>
    <string name="newEmail">Enter new email</string>
    <string name="newUsername">Enter new username</string>
    <string name="noBucket">Add to your bucket list!</string>
    <string name="noBucketOther">No goals on their bucket list. Ask them.</string>
    <string name="noDiscussion">Write a discussion</string>
    <string name="noInbox">No message inbox :(</string>
    <string name="noNearby">No nearby user</string>
    <string name="noPost">No post matching search</string>
    <string name="noPostUser">Post your first destination</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="password">Password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="passwordHintNew">Enter your new password</string>
    <string name="passwordHintNewAgain">Enter your new password again</string>
    <string name="perfectPhoto">THE PERFECT PHOTO</string>
    <string name="personality">Describe your personality</string>
    <string name="postToolbar">Post</string>
    <string name="profilePic">Profile Picture</string>
    <string name="privateVisibility">Private</string>
    <string name="random">Random</string>
    <string name="tbRecentPosts">Recent Posts</string>
    <string name="report">Report</string>
    <string name="saveToolbar">Save</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpBold">SIGN UP</string>
    <string name="statusTravel">Traveling</string>
    <string name="statusNotTravel">Not Traveling</string>
    <string name="stringPost">Post</string>
    <string name="sixThings">The six must haves in your backpack</string>
    <string name="submitFilter">Submit Filter</string>
    <string name="submitSignup1">submitSignUp1</string>
    <string name="submitSignup2">submitSignup2</string>
    <string name="title_activity_travel_selection">TravelSelection</string>
    <string name="travelPost">TRAVEL POSTS</string>
    <string name="txtAbout">About</string>
    <string name="txtFeedback">Send feedback</string>
    <string name="txtNotification">Notification</string>
    <string name="txtSignOut">Sign Out</string>
    <string name="until">Until</string>
    <string name="username">Username</string>
    <string name="usernameOrEmail">Username or Email</string>
    <string name="writeBucket">Write your goal</string>
    <string name="writeComment">Write a comment...</string>
    <string name="writePost">Write your post</string>
    <string-array name="distance_DropDown">
        <item>100 miles</item>
        <item>500 miles</item>
        <item>1000 miles</item>
        <item>5000 miles</item>
    </string-array>
    <string-array name="distance_sort_DropDown">
        <item>DESC</item>
        <item>ASC</item>
    </string-array>
    <string-array name="month_DropDown">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curacao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kosovo</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Lucia</item>
        <item>Samoa</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turks and Caicos</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>U.S. Virgin Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>