<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDiscussion"
            android:title="@string/generalChat" />
        <item
            android:id="@+id/navPerfectPhoto"
            android:title="@string/perfectPhoto" />
        <item
            android:id="@+id/navActivity"
            android:title="@string/travelPost" />
        <item
            android:id="@+id/navFindBuddy"
            android:title="@string/findBud"
            />
        <item
            android:id="@+id/navInbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/navBucketList"
            android:title="@string/bucketList" />
        <item
            android:id="@+id/navDestination"
            android:title="@string/manageDes" />
    </group>
</menu>
