<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBackground"
    android:id="@+id/relative_setting">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/frag_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <Button
        android:id="@+id/bPassword"
        android:text="@string/password"
        android:textAllCaps="false"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#b4d8c3"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:layout_below="@+id/bEmail"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="#b4d8c3"
        android:text="@string/txtNotification"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:layout_below="@+id/bPassword"
        android:layout_marginTop="52dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFeedback"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:layout_below="@+id/button2"
        android:background="#b4d8c3"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSignOut"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:background="#b4d8c3"
        android:layout_marginBottom="55dp"
        android:layout_above="@+id/button3"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAbout"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#b4d8c3"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bEmail"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#b4d8c3"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:layout_gravity="start"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/toolbar_main"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp" />
</RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>