<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/greenBackground">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lowWhite"
            android:layout_margin="@dimen/_20sdp"
            android:padding="@dimen/_20sdp"
            android:id="@+id/layout_filter">

            <TextView
                android:id="@+id/textView5"
                android:text="@string/filterBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:layout_marginBottom="@dimen/_10sdp" />

            <TextView
                android:id="@+id/textView7"
                android:text="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:gravity="center_horizontal" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/button"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp">
                <Spinner
                    android:id="@+id/frag_filter_spinnerCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView9"
                android:text="@string/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:gravity="center_horizontal" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/button"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_30sdp">
                <Spinner
                    android:id="@+id/frag_filter_spinnerMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

