<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

<LinearLayout
    android:id="@+id/activity_change_email"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBackground">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/frag_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
    </include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greenLighter"
        android:paddingTop="20dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp">

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">
            <EditText
                android:id="@+id/tvUserPassword_change"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="14sp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">
            <EditText
                android:id="@+id/tvNewPassword_change"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/passwordHintNew"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginTop="50dp"
                android:textSize="14sp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">
            <EditText
                android:id="@+id/tvNewPassword2_change"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/passwordHintNewAgain"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="14sp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    </LinearLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>